--- a/captcha/index.html
+++ b/captcha/index.html
@@ -18,18 +18,36 @@
 
 			.invalidCaptcha {
 				border: solid 2px red;
+				border-radius: 3px;
 			}
+
+			.invalidCaptcha + span::after {
+				content: "captcha invalide";
+				color: red;
+				font-size: 0.7em;
+				font-style: italic;
+				padding-left: 5px;
+			}
+
 			.validCaptcha {
-
+				border: solid 2px green;
+				border-radius: 3px;
 			}
 
+			.validCaptcha + span::after {
+				content: "vérification réussie";
+				color: green;
+				font-size: 0.7em;
+				font-style: italic;
+				padding-left: 5px;
+			}
 		</style>
 	</head>
 	
 	<body>
 		<div>
-			<p id="captcha"><p>
-			<input id="captchaInput" type="text" placeholder="Entrez le captcha"></br></br>
+			<p id="captcha"></p></br></br>
+			<input id="captchaInput" type="text" placeholder="Entrez le captcha"><span></span></br></br>
 			<button id="captchaValidate">Valider</button>
 			<button id="captchaRefresh">Refresh</button>
 		</div>
@@ -57,7 +75,7 @@
 				// Vide le contenu de l'élément avec l'id "captcha" et y insère un nouveau captcha
 				function generateCaptcha() {
 					captcha.innerHTML = "";
-					captchaInput.value = "";
+					captchaInput.value = ""; 
 
 					let captchaArray = getElementsFromArray(allCharacters, captchaLen);
 					for (let i = 0; i < captchaArray.length; i++) {
